[package]
name = "min-api"
version = "4.7.0"
description = "一个基于Tauri和React开发，用于http/https接口测试的工具"
authors = ["Tive"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.7.1", features = [ "updater", "app-all", "window-all", "dialog-all", "fs-all", "protocol-all", "path-all", "process-all", "global-shortcut-all", "http-all", "http-multipart", "shell-open"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
time = "0.3.36"
log = "^0.4"
# tauri-plugin-log = { version = "2.0.0-rc.0" }
# alternatively with Git:
# tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
